objects/CS_TNT_Claims__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Check_list_opt_1__c</fullName>
        <label>Check list opt 1</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_list_opt_2__c</fullName>
        <label>Check list opt 2</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_list_opt_3__c</fullName>
        <label>Check list opt 3</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_damaged_section_title__c</fullName>
        <label>Claims damaged section Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_postal_address__c</fullName>
        <label>Claims postal address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claims_type_details_section_content__c</fullName>
        <label>Claims type details section Content</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claims_type_details_section_title__c</fullName>
        <label>Claims type details section Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_type_fieldset_label__c</fullName>
        <label>Claims type fieldset label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_value_of_consignment_label__c</fullName>
        <label>Cost value of consignment label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_value_of_items_label__c</fullName>
        <label>Cost value of items label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_section_title__c</fullName>
        <label>Declaration section Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_1__c</fullName>
        <label>Fax 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_2__c</fullName>
        <label>Fax 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method_of_payment_fieldset_label__c</fullName>
        <label>Method of payment fieldset label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Section_title__c</fullName>
        <label>Recipient Section  Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_consignment_no_Label__c</fullName>
        <label>Replacement consignment no Label</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sender_section_title__c</fullName>
        <label>Sender section Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>damaged_items_inspection_label__c</fullName>
        <label>damaged items inspection Label</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TNT UK Claims</label>
</CustomObject>